Added `ByteBufferInputStream`.