@@ -1,18 +1,16 @@
 package org.apiphany.security.ssl.client;
 
-import java.io.ByteArrayInputStream;
-import java.io.ByteArrayOutputStream;
 import java.io.Closeable;
 import java.io.DataOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.OutputStream;
 import java.net.Socket;
+import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
 import java.security.KeyPair;
-import java.security.MessageDigest;
 import java.security.PublicKey;
 import java.security.SecureRandom;
-import java.security.cert.CertificateFactory;
 import java.security.cert.X509Certificate;
 import java.time.Duration;
 import java.util.ArrayList;
@@ -25,9 +23,11 @@ import javax.crypto.spec.GCMParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
 import javax.net.ssl.SSLException;
 
+import org.apiphany.io.ByteBufferInputStream;
 import org.apiphany.io.BytesWrapper;
 import org.apiphany.io.UInt64;
 import org.apiphany.lang.BinaryRepresentable;
+import org.apiphany.lang.ByteSizeable;
 import org.apiphany.lang.Bytes;
 import org.apiphany.lang.Hex;
 import org.apiphany.lang.Strings;
@@ -61,7 +61,6 @@ import org.apiphany.security.tls.Version;
 import org.morphix.lang.Nullables;
 import org.morphix.lang.function.ThrowingBiFunction;
 import org.morphix.lang.function.ThrowingConsumer;
-import org.morphix.lang.function.ThrowingRunnable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -93,16 +92,10 @@ public class MinimalTLSClient implements AutoCloseable {
 	private final SSLProtocol sslProtocol = SSLProtocol.TLS_1_2;
 
 	private Socket tcpSocket;
-	private DataOutputStream out;
+	private OutputStream out;
 	private InputStream in;
 
-	private List<CipherSuite> cipherSuites;
-
-	private byte[] clientRandom;
-	private byte[] serverRandom;
-
-	private byte[] preMasterSecret;
-	private byte[] masterSecret;
+	private final List<CipherSuite> cipherSuites;
 
 	private long clientSequenceNumber = 0;
 	private long serverSequenceNumber = 0;
@@ -118,12 +111,17 @@ public class MinimalTLSClient implements AutoCloseable {
 		this.host = host;
 		this.port = port;
 		this.clientKeyPair = clientKeyPair;
+		for (CipherSuite cipherSuite : cipherSuites) {
+			if (!SUPPORTED_CIPHER_SUITES.contains(cipherSuite)) {
+				throw new IllegalArgumentException("Unsupported cipher suite: " + cipherSuite);
+			}
+		}
 		this.cipherSuites = cipherSuites;
 	}
 
 	@Override
 	public void close() throws Exception {
-		for (Closeable closeable : Arrays.asList(in, out, tcpSocket)) {
+		for (Closeable closeable : List.of(in, out, tcpSocket)) {
 			try {
 				Nullables.whenNotNull(closeable, ThrowingConsumer.unchecked(Closeable::close));
 			} catch (Exception e) {
@@ -143,63 +141,72 @@ public class MinimalTLSClient implements AutoCloseable {
 				tcpSocket.getInetAddress(), tcpSocket.getPort(), tcpSocket.getLocalPort());
 	}
 
-	public void sendRecord(final byte[] bytes) throws IOException {
+	public void sendRecord(final Record tlsRecord) throws IOException {
+		byte[] bytes = tlsRecord.toByteArray();
 		out.write(bytes);
 		out.flush();
+		String[] fragmentNames = tlsRecord.getFragments().stream()
+				.map(f -> (f instanceof Handshake handshake ? handshake.getBody() : f).getClass().getSimpleName())
+				.toArray(String[]::new);
+		LOGGER.debug("Sent {}:\n{}", String.join(".", fragmentNames),  Hex.dump(bytes));
 	}
 
 	public byte[] performHandshake() throws Exception {
 		connect();
 
 		// 1. Send Client Hello
-		Record clientHelloRecord = sendClientHello();
+		ClientHello clientHello =
+				new ClientHello(new SecureRandom(), cipherSuites, List.of(host), SUPPORTED_NAMED_CURVES, SignatureAlgorithm.STRONG_ALGORITHMS);
+		Record clientHelloRecord = new Record(SSLProtocol.TLS_1_0, clientHello);
+		sendRecord(clientHelloRecord);
+		accumulateHandshakes(clientHelloRecord.getFragments(Handshake.class));
 
-		ClientHello clientHello = clientHelloRecord.getHandshake().get(ClientHello.class);
-		this.clientRandom = clientHello.getClientRandom().getRandom();
+		byte[] clientRandom = clientHello.getClientRandom().getRandom();
 		LOGGER.debug("Client random:\n{}", Hex.dump(clientRandom));
 
 		// 2. Receive Server Hello
-		Record serverHelloRecord = Record.from(in);
-		accumulateHandshakes(serverHelloRecord.getFragments(Handshake.class));
+		Record tlsRecord = Record.from(in);
+		accumulateHandshakes(tlsRecord.getFragments(Handshake.class));
 
 		// 2a. Server Hello
-		ServerHello serverHello = serverHelloRecord.getHandshake(ServerHello.class);
-		this.serverRandom = serverHello.getServerRandom().toByteArray();
+		ServerHello serverHello = tlsRecord.getHandshake(ServerHello.class);
+		byte[] serverRandom = serverHello.getServerRandom().toByteArray();
 		LOGGER.debug("Server random:\n{}", Hex.dump(serverRandom));
 		LOGGER.debug("Received Server Hello:\n{}", Hex.dump(serverHello.toByteArray()));
 		CipherSuite serverCipherSuite = serverHello.getCipherSuite();
 
 		// 2b. Server Certificates
-		if (!serverHelloRecord.hasHandshake(Certificates.class)) {
-			serverHelloRecord = Record.from(in);
-			accumulateHandshakes(serverHelloRecord.getFragments(Handshake.class));
+		if (!tlsRecord.hasHandshake(Certificates.class)) {
+			tlsRecord = Record.from(in);
+			accumulateHandshakes(tlsRecord.getFragments(Handshake.class));
 		}
-		Certificates certificates = serverHelloRecord.getHandshake(Certificates.class);
-		X509Certificate x509Certificate = parseCertificate(certificates.getList().getFirst().getData().toByteArray());
+		Certificates certificates = tlsRecord.getHandshake(Certificates.class);
 		LOGGER.debug("Received Server Certificate:\n{}", Hex.dump(certificates.toByteArray()));
+		X509Certificate x509Certificate = certificates.getList().getFirst().toX509Certificate();
 		LOGGER.debug("Received Server X509Certificate: {}", x509Certificate);
 
 		// 2b. Server Key Exchange (RSA cipher suites don't have a server key exchange)
 		ServerKeyExchange serverKeyExchange = null;
 		if (KeyExchangeAlgorithm.ECDHE == serverCipherSuite.keyExchange()) {
-			if (!serverHelloRecord.hasHandshake(ServerKeyExchange.class)) {
-				serverHelloRecord = Record.from(in);
-				accumulateHandshakes(serverHelloRecord.getFragments(Handshake.class));
+			if (!tlsRecord.hasHandshake(ServerKeyExchange.class)) {
+				tlsRecord = Record.from(in);
+				accumulateHandshakes(tlsRecord.getFragments(Handshake.class));
 			}
-			serverKeyExchange = serverHelloRecord.getHandshake(ServerKeyExchange.class);
+			serverKeyExchange = tlsRecord.getHandshake(ServerKeyExchange.class);
 			LOGGER.debug("Received Server Key Exchange:\n{}", Hex.dump(serverKeyExchange.toByteArray()));
 		}
 
 		// 2b. Server Hello Done
-		if (!serverHelloRecord.hasHandshake(ServerHelloDone.class)) {
-			serverHelloRecord = Record.from(in);
-			accumulateHandshakes(serverHelloRecord.getFragments(Handshake.class));
+		if (!tlsRecord.hasHandshake(ServerHelloDone.class)) {
+			tlsRecord = Record.from(in);
+			accumulateHandshakes(tlsRecord.getFragments(Handshake.class));
 		}
-		ServerHelloDone serverHelloDone = serverHelloRecord.getHandshake(ServerHelloDone.class);
+		ServerHelloDone serverHelloDone = tlsRecord.getHandshake(ServerHelloDone.class);
 		LOGGER.debug("Received Server Hello Done:\n{}", Hex.dump(serverHelloDone.toByteArray()));
 
 		// 3. Generate Client Key Exchange
 		TLSKeyExchange tlsKeyExchange;
+		byte[] preMasterSecret;
 		switch (serverCipherSuite.keyExchange()) {
 			case ECDHE -> {
 				byte[] leServerPublic = Objects.requireNonNull(serverKeyExchange).getPublicKey().getValue().toByteArray();
@@ -210,13 +217,13 @@ public class MinimalTLSClient implements AutoCloseable {
 				LOGGER.debug("Server public key ({}):\n{}", serverPublicKey.getClass(), serverPublicKey);
 				LOGGER.debug("Keys match: {}", keys.verifyKeyMatch(keys.toRawByteArray(serverPublicKey), serverPublicKey));
 				// Compute shared secret
-				this.preMasterSecret = keys.getSharedSecret(clientKeyPair.getPrivate(), serverPublicKey);
+				preMasterSecret = keys.getSharedSecret(clientKeyPair.getPrivate(), serverPublicKey);
 				LOGGER.debug("Pre Master Secret:\n{}", Hex.dump(preMasterSecret));
 			}
 			case RSA -> {
 				this.serverPublicKey = x509Certificate.getPublicKey();
-				this.preMasterSecret =
-						Bytes.concatenate(new Version(SSLProtocol.TLS_1_2).toByteArray(), DeterministicSecureRandom.generateLinear(46));
+				preMasterSecret =
+						Bytes.concatenate(new Version(sslProtocol).toByteArray(), DeterministicSecureRandom.generateLinear(46));
 				// Encrypt pre-master with server's RSA key
 				Cipher rsa = Cipher.getInstance("RSA/ECB/PKCS1Padding");
 				rsa.init(Cipher.ENCRYPT_MODE, serverPublicKey);
@@ -228,14 +235,11 @@ public class MinimalTLSClient implements AutoCloseable {
 
 		// 4. Send Client Key Exchange
 		Record clientKeyExchangeRecord = new Record(sslProtocol, new ClientKeyExchange(tlsKeyExchange));
-		byte[] clientKeyExchangeBytes = clientKeyExchangeRecord.toByteArray();
-
-		sendRecord(clientKeyExchangeBytes);
+		sendRecord(clientKeyExchangeRecord);
 		accumulateHandshakes(clientKeyExchangeRecord.getFragments(Handshake.class));
-		LOGGER.debug("Sent Client Key Exchange:\n{}", Hex.dump(clientKeyExchangeBytes));
 
 		// 5. Derive Master Secret and Keys
-		this.masterSecret = PseudoRandomFunction.apply(preMasterSecret, "master secret", Bytes.concatenate(clientRandom, serverRandom), 48);
+		byte[] masterSecret = PseudoRandomFunction.apply(preMasterSecret, "master secret", Bytes.concatenate(clientRandom, serverRandom), 48);
 		LOGGER.debug("Master secret:\n{}", Hex.dump(masterSecret));
 		byte[] keyBlock = PseudoRandomFunction.apply(masterSecret, "key expansion",
 				Bytes.concatenate(serverRandom, clientRandom), (ExchangeKeys.KEY_LENGTH + ExchangeKeys.IV_LENGTH) * 2);
@@ -244,15 +248,14 @@ public class MinimalTLSClient implements AutoCloseable {
 
 		// 6. Send Client Change Cipher Spec
 		Record changeCypherSpecRecord = new Record(sslProtocol, new ChangeCipherSpec());
-		sendRecord(changeCypherSpecRecord.toByteArray());
-		LOGGER.debug("Sent Client Change Cipher Spec:\n{}", Hex.dump(changeCypherSpecRecord.toByteArray()));
+		sendRecord(changeCypherSpecRecord);
 
 		// 7. Send Finished
 		byte[] handshakeBytes = getConcatenatedHandshakeMessages();
 		LOGGER.debug("Concatenated handshake message content types:\n{}", getConcatenatedHandshakeMessageTypes());
 		LOGGER.debug("Handshake transcript ({} bytes):\n{}", handshakeBytes.length, Hex.dump(handshakeBytes));
 
-		byte[] handshakeHash = sha("SHA-384", handshakeBytes);
+		byte[] handshakeHash = HashingFunction.apply("SHA-384", handshakeBytes);
 		LOGGER.debug("Handshake hash:\n{}", Hex.dump(handshakeHash));
 
 		byte[] clientVerifyData = PseudoRandomFunction.apply(masterSecret, "client finished", handshakeHash, 12);
@@ -260,14 +263,11 @@ public class MinimalTLSClient implements AutoCloseable {
 		Handshake clientFinishedHandshake = new Handshake(new Finished(clientVerifyData));
 
 		Encrypted encrypted = encrypt(clientFinishedHandshake, RecordContentType.HANDSHAKE, exchangeKeys);
-		Record clientFinished = new Record(SSLProtocol.TLS_1_2, encrypted);
-
-		byte[] clientFinishedBytes = clientFinished.toByteArray();
-		sendRecord(clientFinishedBytes);
-		LOGGER.debug("Sent Client Finished Message:\n{}", Hex.dump(clientFinishedBytes));
+		Record clientFinished = new Record(sslProtocol, encrypted);
+		sendRecord(clientFinished);
 
 		// 8. Receive ChangeCipherSpec and Finished
-		Record serverChangeCipherSpec = Record.from(in); // type 0x14
+		Record serverChangeCipherSpec = Record.from(in);
 		LOGGER.debug("Received Change Cipher Spec:\n{}", Hex.dump(serverChangeCipherSpec.toByteArray()));
 
 		// 9. Receive Server Finished Record
@@ -276,18 +276,19 @@ public class MinimalTLSClient implements AutoCloseable {
 
 		// 10. Decrypt finished
 		byte[] decrypted = decrypt(serverFinishedRecord, RecordContentType.HANDSHAKE, exchangeKeys);
-		Handshake serverFinishedHandshake = Handshake.from(new ByteArrayInputStream(decrypted));
+		Handshake serverFinishedHandshake = Handshake.from(ByteBufferInputStream.of(decrypted));
 		LOGGER.debug("Received Server Finished (decrypted):\n{}", Hex.dump(serverFinishedHandshake.toByteArray()));
+		Finished serverFinished = serverFinishedHandshake.get(Finished.class);
 
 		// 11. Compute server verify data and validate
 		accumulateHandshake(clientFinishedHandshake);
 		handshakeBytes = getConcatenatedHandshakeMessages();
-		handshakeHash = sha("SHA-384", handshakeBytes);
-
+		handshakeHash = HashingFunction.apply("SHA-384", handshakeBytes);
 		LOGGER.debug("Handshake hash:\n{}", Hex.dump(handshakeHash));
+
 		byte[] computedVerifyData = PseudoRandomFunction.apply(masterSecret, "server finished", handshakeHash, 12);
 		LOGGER.debug("Computed Server verify data:\n{}", Hex.dump(computedVerifyData));
-		byte[] serverVerifyData = serverFinishedHandshake.get(Finished.class).getVerifyData().toByteArray();
+		byte[] serverVerifyData = serverFinished.getVerifyData().toByteArray();
 		LOGGER.debug("Received Server verify data:\n{}", Hex.dump(serverVerifyData));
 		if (Arrays.equals(computedVerifyData, serverVerifyData)) {
 			LOGGER.debug("Server Finished verification SUCCESS!");
@@ -295,7 +296,7 @@ public class MinimalTLSClient implements AutoCloseable {
 			throw new SecurityException("Server Finished verification FAILED!");
 		}
 
-		LOGGER.info("{} handshake complete!", SSLProtocol.TLS_1_2);
+		LOGGER.info("{} handshake complete!", sslProtocol);
 		return serverFinishedRecord.toByteArray();
 	}
 
@@ -303,12 +304,10 @@ public class MinimalTLSClient implements AutoCloseable {
 		Alert closeAlert = new Alert(AlertLevel.WARNING, AlertDescription.CLOSE_NOTIFY);
 		Encrypted encrypted = encrypt(closeAlert, RecordContentType.ALERT, exchangeKeys);
 
-		Record closeAlertRecord = new Record(SSLProtocol.TLS_1_2, encrypted);
-		byte[] closeAlertBytes = closeAlertRecord.toByteArray();
-		sendRecord(closeAlertBytes);
-		LOGGER.debug("Sent Client Close Notify:\n{}", Hex.dump(closeAlertBytes));
+		Record closeAlertRecord = new Record(sslProtocol, encrypted);
+		sendRecord(closeAlertRecord);
 
-		return closeAlertBytes;
+		return closeAlertRecord.toByteArray();
 	}
 
 	public String get(final String path) throws Exception {
@@ -319,9 +318,8 @@ public class MinimalTLSClient implements AutoCloseable {
 
 		byte[] requestBytes = request.getBytes(StandardCharsets.US_ASCII);
 		Encrypted encrypted = encrypt(new BytesWrapper(requestBytes), RecordContentType.APPLICATION_DATA, exchangeKeys);
-		Record requestRecord = new Record(SSLProtocol.TLS_1_2, new ApplicationData(encrypted));
-		sendRecord(requestRecord.toByteArray());
-		LOGGER.debug("Sent Application Data Record:\n{}", Hex.dump(requestRecord.toByteArray()));
+		Record requestRecord = new Record(sslProtocol, new ApplicationData(encrypted));
+		sendRecord(requestRecord);
 
 		Record responseRecord = Record.from(in, ThrowingBiFunction.unchecked((is, total) -> Encrypted.from(is, total, 8)));
 		LOGGER.debug("Received Application Data Record:\n{}", Hex.dump(responseRecord.toByteArray()));
@@ -351,22 +349,6 @@ public class MinimalTLSClient implements AutoCloseable {
 		return responseBuilder.toString();
 	}
 
-	private Record sendClientHello() throws IOException {
-		ClientHello clientHello =
-				new ClientHello(new SecureRandom(), cipherSuites, List.of(host), SUPPORTED_NAMED_CURVES, SignatureAlgorithm.STRONG_ALGORITHMS);
-		Record clientHelloRecord = new Record(SSLProtocol.TLS_1_0, clientHello);
-		byte[] clientHelloBytes = clientHelloRecord.toByteArray();
-		sendRecord(clientHelloBytes);
-		accumulateHandshakes(clientHelloRecord.getFragments(Handshake.class));
-		LOGGER.debug("Sent Client Hello:\n{}", Hex.dump(clientHelloBytes));
-		return clientHelloRecord;
-	}
-
-	public X509Certificate parseCertificate(final byte[] certData) throws Exception {
-		CertificateFactory certFactory = CertificateFactory.getInstance("X.509");
-		return (X509Certificate) certFactory.generateCertificate(new ByteArrayInputStream(certData));
-	}
-
 	public byte[] getClientPublicBytes(final ServerKeyExchange ske, final TLSKeysHandler keys) throws Exception {
 		byte[] serverPubBytes = ske.getPublicKey().getValue().toByteArray();
 		this.serverPublicKey = keys.getPublicKeyLE(serverPubBytes);
@@ -389,7 +371,7 @@ public class MinimalTLSClient implements AutoCloseable {
 		System.arraycopy(explicitNonce, 0, fullIV, 4, 8);
 
 		short aadLength = (short) plaintext.length;
-		AdditionalAuthenticatedData aad = new AdditionalAuthenticatedData(seq, type, SSLProtocol.TLS_1_2, aadLength);
+		AdditionalAuthenticatedData aad = new AdditionalAuthenticatedData(seq, type, sslProtocol, aadLength);
 		LOGGER.debug("Encrypt AAD:\n{}", Hex.dump(aad.toByteArray()));
 
 		Cipher cipher = Cipher.getInstance("AES/GCM/NoPadding");
@@ -415,7 +397,7 @@ public class MinimalTLSClient implements AutoCloseable {
 		System.arraycopy(explicitNonce, 0, fullIV, 4, 8);
 
 		short aadLength = (short) (encrypted.getEncryptedData().toByteArray().length - 16);
-		AdditionalAuthenticatedData aad = new AdditionalAuthenticatedData(seq, type, SSLProtocol.TLS_1_2, aadLength);
+		AdditionalAuthenticatedData aad = new AdditionalAuthenticatedData(seq, type, sslProtocol, aadLength);
 		LOGGER.debug("Decrypt AAD:\n{}", Hex.dump(aad.toByteArray()));
 
 		Cipher cipher = Cipher.getInstance("AES/GCM/NoPadding");
@@ -441,14 +423,11 @@ public class MinimalTLSClient implements AutoCloseable {
 	}
 
 	public byte[] getConcatenatedHandshakeMessages() {
-		ByteArrayOutputStream bos = new ByteArrayOutputStream();
-		DataOutputStream dos = new DataOutputStream(bos);
-		ThrowingRunnable.unchecked(() -> {
-			for (Handshake handshake : handshakeMessages) {
-				dos.write(handshake.toByteArray());
-			}
-		}).run();
-		return bos.toByteArray();
+		ByteBuffer buffer = ByteBuffer.allocate(ByteSizeable.sizeOf(handshakeMessages));
+		for (Handshake handshake : handshakeMessages) {
+			buffer.put(handshake.toByteArray());
+		}
+		return buffer.array();
 	}
 
 	public String getConcatenatedHandshakeMessageTypes() {
@@ -460,8 +439,4 @@ public class MinimalTLSClient implements AutoCloseable {
 		return stringBuilder.toString();
 	}
 
-	public static byte[] sha(final String algorithm, final byte[] input) throws Exception {
-		MessageDigest digest = MessageDigest.getInstance(algorithm);
-		return digest.digest(input);
-	}
 }
